--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,12 @@
-[package]
-name = "hockey-heatmap-cli"
-version = "0.1.0"
-edition = "2024"
+[workspace]
+members = ["crates/sdk", "crates/cli"]
+resolver = "2"
 
-[dependencies]
+[workspace.dependencies]
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+tokio = { version = "1", features = ["full"] }
+anyhow = "1.0"
+clap = { version = "4", features = ["derive"] }
+tracing = "0.1" 
+tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
